tests/NormalTests/paczka1/fuzzy1/13101720.err
Error in line 14: JaYLcLiFD S119 92,8
Error in line 11: 81SLaNhC S100 88,7
Error in line 18: 81SLaNhC S112 40,3
Error in line 25: wwtg S119 79,6
Error in line 24: 81SLaNhC S100 92,8
Error in line 27: 81SLaNhC S67 45,5
Error in line 31: 81SLaNhC S112 5,3
Error in line 35: ciR8 S119 7,8
